@@ -2356,8 +2356,28 @@ class RuntimeInstanceAttributeMixin(DataDocumenterMixinBase):
         # An instance variable defined in __init__().
         if self.get_attribute_comment(parent, self.objpath[-1]):  # type: ignore
             return True
+        elif self.is_runtime_instance_attribute_not_commented(parent):
+            return True
         else:
             return False
+
+    def is_runtime_instance_attribute_not_commented(self, parent: Any) -> bool:
+        """Check the subject is an attribute defined in __init__() without comment."""
+        for cls in inspect.getmro(parent):
+            try:
+                module = safe_getattr(cls, '__module__')
+                qualname = safe_getattr(cls, '__qualname__')
+
+                analyzer = ModuleAnalyzer.for_module(module)
+                analyzer.analyze()
+                if qualname and self.objpath:
+                    key = '.'.join([qualname, self.objpath[-1]])
+                    if key in analyzer.tagorder:
+                        return True
+            except (AttributeError, PycodeError):
+                pass
+
+        return None
 
     def import_object(self, raiseerror: bool = False) -> bool:
         """Check the existence of runtime instance attribute when failed to import the
@@ -2388,6 +2408,13 @@ class RuntimeInstanceAttributeMixin(DataDocumenterMixinBase):
     def should_suppress_value_header(self) -> bool:
         return (self.object is self.RUNTIME_INSTANCE_ATTRIBUTE or
                 super().should_suppress_value_header())
+
+    def get_doc(self, ignore: int = None) -> Optional[List[List[str]]]:
+        if (self.object is self.RUNTIME_INSTANCE_ATTRIBUTE and
+                self.is_runtime_instance_attribute_not_commented(self.parent)):
+            return None
+        else:
+            return super().get_doc(ignore)  # type: ignore
 
 
 class UninitializedInstanceAttributeMixin(DataDocumenterMixinBase):
