@@ -55,6 +55,8 @@ Bugs fixed
   undocumented
 * #9185: autodoc: typehints for overloaded functions and methods are inaccurate
 * #9250: autodoc: The inherited method not having docstring is wrongly parsed
+* #9283: autodoc: autoattribute directive failed to generate document for an
+  attribute not having any comment
 * #9270: html theme : pyramid theme generates incorrect logo links
 * #9217: manpage: The name of manpage directory that is generated by
   :confval:`man_make_section_directory` is not correct
